Fix format + Adding swagger + README

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5433/schedule
 spring.datasource.username=postgres
-spring.datasource.password=Gala2405
+spring.datasource.password=your_password
 spring.jpa.show-sql=true
 
 ## Hibernate Properties
@@ -9,4 +9,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+##spring.sql.init.mode=always
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
